Beaucoup de changements
meta og rajoutées dans header, page création crée, responsive plus ou
moins vérifié. c'est pas parfait mais c'est une V1

--- a/template/themeA/header.html
+++ b/template/themeA/header.html
@@ -2,6 +2,26 @@
 <html>
 
 <head>
+    <!-- META og -->
+
+    <!-- FACEBOOK -->
+    <meta property="fb:app_id" content="facebook_app_id" />
+    <meta property="og:url" content="lien url de l'image" />
+    <meta property="og:title" content="Générateur de meme" />
+    <meta property="og:type" content="image" />
+    <meta property="og:description" content="Le meilleur site FR de création de meme en ligne !">
+    <meta property="og:image" content="Faut mettre l'image ici" />
+
+    <!-- TWITTER -->
+
+    <meta name="twitter:creator" content="Groupe 3">
+    <meta name="twitter:site" content="Générateur de meme">
+    <meta name="twitter:description" content="Le meilleur site FR de création de meme en ligne !">
+    <meta name="twitter:image:src" content="">
+    <meta name="twitter:image" content="">
+
+    <!-- End META og -->
+
     <link rel="stylesheet" href="../../css/themeA/style.css">
     <link rel="stylesheet" href="../../css/themeA/bootstrap.min.css">
     <script type="text/javascript" src="../../js/bootstrap.min.js"></script>
