--- a/css/themeA/style.css
+++ b/css/themeA/style.css
@@ -15,6 +15,19 @@ footer {
 }
 
 p {
-    font-size: 250%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    font-size: 2vmax;
     text-align: center;
+}
+
+textarea {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 40%;
+}
+
+.creaimg {
+    margin-right: 10%;
 }
