add index for MVC model and mustache

--- a/template/themeA/header.html
+++ b/template/themeA/header.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <!-- META og -->
+<head>    <!-- META og -->
 
     <!-- FACEBOOK -->
     <meta property="fb:app_id" content="facebook_app_id" />
@@ -21,10 +20,10 @@
     <meta name="twitter:image" content="">
 
     <!-- End META og -->
-
-    <link rel="stylesheet" href="../../css/themeA/style.css">
-    <link rel="stylesheet" href="../../css/themeA/bootstrap.min.css">
-    <script type="text/javascript" src="../../js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/themeA/style.css">
+    <link rel="stylesheet" href="css/themeA/bootstrap.min.css">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <meta charset="utf-8">
     <title></title>
 </head>
