--- a/template/themeA/main.html
+++ b/template/themeA/main.html
@@ -2,140 +2,12 @@
 
 <div class="container">
     <div class="row">
+      {{#list}}
         <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/raptor.png" alt="..." class="img-rounded img-responsive">
+            <a href="index.php?action=generate&id={{ID}}" class="thumbnail">
+                <img src="public/origImg/{{ID}}.{{type}}" alt="..." class="img-rounded img-responsive">
             </a>
         </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/doge.gif" alt="..." class="img-rounded img-responsive">
-            </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/grumpy-cat.jpg" alt="..." class="img-rounded img-responsive">
-            </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/girl_wat.jpg" alt="..." class="img-rounded img-responsive">
-            </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/if_told_you.jpg" alt="..." class="img-rounded img-responsive">
-            </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/incroyable.png" alt="..." class="img-rounded img-responsive">
-            </a>
-        </div>
-    </div>
-</div>
-
-<div class="container">
-    <div class="row">
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/aliens.jpg" alt="..." class="img-rounded img-responsive">
-            </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/carl.jpg" alt="..." class="img-rounded img-responsive">
-            </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/dicaprio.jpg" alt="..." class="img-rounded img-responsive">
-            </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/evil_kid.jpg" alt="..." class="img-rounded img-responsive">
-            </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/facepalm.png" alt="..." class="img-rounded img-responsive">
-            </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/grumpy_puggle.png" alt="..." class="img-rounded img-responsive">
-            </a>
-        </div>
-    </div>
-</div>
-
-<div class="container">
-    <div class="row">
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/jackie.jpg" alt="..." class="img-rounded img-responsive">
-            </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/kevin.png" alt="..." class="img-rounded img-responsive">
-            </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/not_bad.jpg" alt="..." class="img-rounded img-responsive">
-            </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/One-Does-Not-Simply.jpg" alt="..." class="img-rounded img-responsive">
-            </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/pinkie_pie.png" alt="..." class="img-rounded img-responsive">
-            </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/michael.jpg" alt="..." class="img-rounded img-responsive">
-            </a>
-        </div>
-    </div>
-</div>
-
-<div class="container">
-    <div class="row">
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/putin.jpg" alt="..." class="img-rounded img-responsive">
-            </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/everywhere.png" alt="..." class="img-rounded img-responsive">
-            </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/rly.png" alt="..." class="img-rounded img-responsive">
-            </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/funny_dog.png" alt="..." class="img-rounded img-responsive">
-            </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/shut_up.jpg" alt="..." class="img-rounded img-responsive">
-            </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
-                <img src="images/trump.jpg" alt="..." class="img-rounded img-responsive">
-            </a>
-        </div>
+      {{/list}}
     </div>
 </div>
