Ajout logo et retouche responsive
On a un zoulis logo chat KAWAIIIIIIIII et j'ai modifié un peu le css
pour que le bouton sois css-ment parlant géré à pars du logo. le tout en
responsive

--- a/css/themeA/style.css
+++ b/css/themeA/style.css
@@ -1,11 +1,14 @@
 header {
     background-color: black;
     height: 5em;
-    padding-top: 1.3em;
+}
+
+#bouton {
+    margin-top: 1.3em;
 }
 
 body {
-    background-color: #EEEEEE;
+    background-color: rgb(238, 238, 238);
 }
 
 footer {
