--- a/template/themeA/header.html
+++ b/template/themeA/header.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 
-<head>    <!-- META og -->
+<head>
+    <!-- META og -->
 
     <!-- FACEBOOK -->
     <meta property="fb:app_id" content="facebook_app_id" />
@@ -20,10 +21,10 @@
     <meta name="twitter:image" content="">
 
     <!-- End META og -->
-    <link rel="stylesheet" href="css/themeA/style.css">
-    <link rel="stylesheet" href="css/themeA/bootstrap.min.css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../../css/themeA/style.css">
+    <link rel="stylesheet" href="../../css/themeA/bootstrap.min.css">
+    <script type="text/javascript" src="../../js/bootstrap.min.js"></script>
     <meta charset="utf-8">
     <title></title>
 </head>
@@ -33,8 +34,8 @@
         <section class="buttons">
             <div class="container">
                 <div class="row">
-                    <a class="col-md-2-align-left">LOGO</a>
-                    <button type="button" name="button" class="btn btn-default col-md-2 col-xs-4 pull-right">Create yours</button>
+                    <a class="col-md-2-align-left"><img src="../../public/img/logo.png" width="93em"></a>
+                    <button type="button" id="bouton" name="button" class="btn btn-default col-md-2 col-xs-4 pull-right">Create yours</button>
                 </div>
             </div>
         </section>
