--- a/template/themeA/header.html
+++ b/template/themeA/header.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="../../css/themeA/style.css">
     <link rel="stylesheet" href="../../css/themeA/bootstrap.min.css">
     <script type="text/javascript" src="../../js/bootstrap.min.js"></script>
+    <link rel="icon" href="images.png" />
     <meta charset="utf-8">
     <title></title>
 </head>
