--- a/template/themeA/header.html
+++ b/template/themeA/header.html
@@ -21,11 +21,12 @@
     <meta name="twitter:image" content="">
 
     <!-- End META og -->
+    <link rel="stylesheet" href="../../font-awesome/css/font-awesome.css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <link rel="stylesheet" href="../../css/themeA/style.css">
     <link rel="stylesheet" href="../../css/themeA/bootstrap.min.css">
     <script type="text/javascript" src="../../js/bootstrap.min.js"></script>
-    <link rel="icon" href="images.png" />
+    <link rel="icon" href="../../public/favicon/images.png" />
     <meta charset="utf-8">
     <title></title>
 </head>
