--- a/template/themeA/creation.html
+++ b/template/themeA/creation.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <img src="../../public/img/doge.png" alt="" class="img-responsive">
+                <img src="public/origImg/doge.png" alt="" class="img-responsive">
             </div>
             <div class="col-md-6">
                 <textarea name="" placeholder="Top text" class="form-control" rows="6"></textarea>
