--- a/template/themeA/vue.html
+++ b/template/themeA/vue.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="../../font-awesome/css/font-awesome.css">
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <link rel="stylesheet" href="../../css/themeA/style.css">
-    <link rel="stylesheet" href="../../css/themeA/bootstrap.min.css">
-    <script type="text/javascript" src="../../js/bootstrap.min.js"></script>
-    <title></title>
-  </head>
-  <body>
+
     <p>SHARE YOUR PICTURE</p>
     <div class="container">
         <div class="row">
@@ -20,14 +9,15 @@
               <button class="btn btn-block btn-social btn-facebook" id="fb">
               <i class="fa fa-facebook"></i> Share with Facebook
               </button>
+              <hr>
               <button class="btn btn-block btn-social btn-twitter" id="twitter">
               <i class="fa fa-twitter"></i> Share with Twitter
-              </button>
-              <button class="btn btn-block btn-social btn-twitter" id="twitter">
-              <i class="fa fa-link"></i> Share with Twitter
-              </button>
+            </button>
+            <hr>
+              <div class="search">
+                <span class="fa fa-link"></span>
+                <input placeholder="Search term" style="width: 100%; height: 59px;">
+              </div>
             </div>
         </div>
     </div>
-  </body>
-</html>
