--- a/template/themeA/creation.html
+++ b/template/themeA/creation.html
@@ -1,21 +1,10 @@
-<!DOCTYPE html>
-<html>
 
-<head>
-    <link rel="stylesheet" href="../../css/themeA/bootstrap.min.css">
-    <link rel="stylesheet" href="../../css/themeA/style.css">
-    <script type="text/javascript" src="../../js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script>
-    <meta charset="utf-8">
-    <title></title>
-</head>
 
-<body>
     <p>TYPE YOUR TEXT AND CHANGE HIS SIZE</p>
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <img src="public/origImg/doge.png" alt="" class="img-responsive">
+                <img src="public/origImg/{{ID}}.{{type}}" alt="" class="img-responsive">
             </div>
             <div class="col-md-6">
                 <textarea name="" placeholder="Top text" class="form-control" rows="6"></textarea>
@@ -26,6 +15,3 @@
             </div>
         </div>
     </div>
-</body>
-
-</html>
