--- a/template/themeA/vue.html
+++ b/template/themeA/vue.html
@@ -1,4 +1,3 @@
-
     <p>SHARE YOUR PICTURE</p>
     <div class="container">
         <div class="row">
@@ -6,11 +5,11 @@
                 <img src="../../public/img/doge.png" alt="" class="img-responsive">
             </div>
             <div class="col-md-6 social-buttons">
-              <button class="btn btn-block btn-social btn-facebook" id="fb">
+              <button class="btn btn-block btn-social btn-facebook" href="https://www.facebook.com/sharer/sharer.php?display=popup&redirect_uri=" id="fb">
               <i class="fa fa-facebook"></i> Share with Facebook
               </button>
               <hr>
-              <button class="btn btn-block btn-social btn-twitter" id="twitter">
+              <button class="btn btn-block btn-social btn-twitter" href="https://twitter.com/intent/tweet?text=" id="twitter">
               <i class="fa fa-twitter"></i> Share with Twitter
             </button>
             <hr>
