--- a/template/themeA/creation.html
+++ b/template/themeA/creation.html
@@ -4,6 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
+                <!-- affichage de l'image  -->
                 <img src="public/origImg/{{ID}}.{{type}}" alt="" class="img-responsive">
             </div>
             <div class="col-md-6">
