--- a/template/themeA/header.html
+++ b/template/themeA/header.html
@@ -36,7 +36,7 @@
         <section class="buttons">
             <div class="container">
                 <div class="row">
-                    <a href="index.php" class="col-md-2-align-left"><img src="../../public/img/logo.png" width="93em"></a>
+                    <a href="index.php" class="col-md-2-align-left"><img src="public/img/logo.png" width="93em"></a>
                     <button type="button" id="bouton" name="button" class="btn btn-default col-md-2 col-xs-4 pull-right">Create yours</button>
                 </div>
             </div>
