--- a/template/themeA/creation.html
+++ b/template/themeA/creation.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-md-6">
                 <!-- affichage de l'image  -->
-                <img src="public/origImg/{{ID}}.{{type}}" alt="" class="img-responsive">
+                <img src="public/img/{{ID}}.{{type}}" alt="" class="img-responsive">
             </div>
             <div class="col-md-6">
                 <textarea name="" placeholder="Top text" class="form-control" rows="6"></textarea>
