--- a/template/themeA/main.html
+++ b/template/themeA/main.html
@@ -5,7 +5,7 @@
       {{#list}}
         <div class="col-xs-6 col-md-2">
             <a href="index.php?action=generate&id={{ID}}" class="thumbnail">
-                <img src="public/origImg/{{ID}}.{{type}}" alt="..." class="img-rounded img-responsive">
+                <img src="public/img/{{ID}}.{{type}}" alt="..." class="img-rounded img-responsive">
             </a>
         </div>
       {{/list}}
