--- a/template/themeA/creation.html
+++ b/template/themeA/creation.html
@@ -2,17 +2,19 @@
 
     <p>TYPE YOUR TEXT AND CHANGE HIS SIZE</p>
     <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <!-- affichage de l'image  -->
-                <img src="public/img/{{ID}}.{{type}}" alt="" class="img-responsive">
-            </div>
-            <div class="col-md-6">
-                <textarea name="" placeholder="Top text" class="form-control" rows="6"></textarea>
-                <hr>
-                <textarea name="" placeholder="Bottom text" class="form-control" rows="6"></textarea>
-                <hr>
-                <button type="button" class="btn btn-success btn-lg">Generate</button>
-            </div>
-        </div>
-    </div>
+            <div class="row">
+                          <div class="col-md-6">
+                          <!-- affichage de l'image  -->
+                      <form>
+                          <img src="public/img/{{ID}}.{{type}}" alt="" class="img-responsive">
+                          </div
+                          <div class="col-md-6">
+                          <textarea name="" placeholder="Top text" class="form-control" rows="6"></textarea>
+                          <hr>
+                          <textarea name="" placeholder="Bottom text" class="form-control" rows="6"></textarea>
+                          <hr>
+                          <button type="button" class="btn btn-success btn-lg">Generate</button>
+                      </div>
+                  </div>
+              </div>
+        </form>
