--- a/template/themeA/creation.html
+++ b/template/themeA/creation.html
@@ -1,22 +1,19 @@
-
-
-    <p>TYPE YOUR TEXT AND CHANGE HIS SIZE</p>
-    <div class="container">
-      <div class="row">
+<p>TYPE YOUR TEXT AND CHANGE HIS SIZE</p>
+<div class="container">
+    <div class="row">
         <div class="col-md-6">
-          <!-- affichage de l'image  -->
-          <img src="public/img/{{ID}}.{{type}}" alt="" class="img-responsive">
+            <!-- affichage de l'image  -->
+            <img src="public/img/{{ID}}.{{type}}" alt="" class="img-responsive">
         </div>
-
         <div class="col-md-6">
-          <form class="include/fonction.php">
-
-            <textarea name="textTop" placeholder="Top text" class="form-control" rows="6"></textarea>
-            <hr>
-            <textarea name="TextBot" placeholder="Bottom text" class="form-control" rows="6"></textarea>
-            <hr>
-            <button type="submit" class="btn btn-success btn-lg">Generate</button>
-          </form>
+            <form action="include/fonction.php">
+                <textarea name="textTop" placeholder="Top text" class="form-control" rows="6"></textarea>
+                <hr>
+                <textarea name="textBot" placeholder="Bottom text" class="form-control" rows="6"></textarea>
+                <hr>
+                <input type="hidden" name="idImg" value="{{ID}}">
+                <button type="submit" class="btn btn-success btn-lg">Generate</button>
+            </form>
         </div>
-      </div>
     </div>
+</div>
