--- a/template/themeA/footer.html
+++ b/template/themeA/footer.html
@@ -1,3 +1,7 @@
-<footer>
-    LOL Copyright OSEF
-</footer>
+    <footer>
+    	<div class="container-fluid" id="footy">
+    		<div class="row">
+    			<a href="#" class=col-md-9>Created by Yoboumany. All rights reserved Author &#169;</a>
+    		</div>
+    	</div>
+    </footer>
