maj vue pour afficher la vue de l'image genere

--- a/template/themeA/vue.html
+++ b/template/themeA/vue.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <img src="../../public/img/doge.png" alt="" class="img-responsive">
+                <img src="public/uploadImg/{{ID}}.{{TYPE}}" alt="" class="img-responsive">
             </div>
             <div class="col-md-6 social-buttons">
               <button class="btn btn-block btn-social btn-facebook" href="https://www.facebook.com/sharer/sharer.php?display=popup&redirect_uri=" id="fb">
