--- a/template/themeA/creation.html
+++ b/template/themeA/creation.html
@@ -8,8 +8,14 @@
         <div class="col-md-6">
             <form action="include/fonction.php">
                 <textarea name="textTop" placeholder="Top text" class="form-control" rows="6"></textarea>
+                <button type="button" name="button" classe="btn btn-default btn-lg">+</button>
+                <button type="button" name="button" classe="btn btn-default btn-lg">-</button>
+                <input type="color" name="" value="" class="colorPick">
                 <hr>
                 <textarea name="textBot" placeholder="Bottom text" class="form-control" rows="6"></textarea>
+                <button type="button" name="button" classe="btn btn-default btn-lg">+</button>
+                <button type="button" name="button" classe="btn btn-default btn-lg">-</button>
+                <input type="color" name="" value="" class="colorPick">
                 <hr>
                 <input type="hidden" name="idImg" value="{{ID}}">
                 <button type="submit" class="btn btn-success btn-lg">Generate</button>
