tailles et couleurs du text
ajout de la ligne :
define('URL_SITE', $_SERVER['HTTP_HOST']."/meme/");
dans le fichier .init.php.

--- a/template/themeA/header.html
+++ b/template/themeA/header.html
@@ -23,6 +23,7 @@
     <!-- End META og -->
     <link rel="stylesheet" href="font-awesome/css/font-awesome.css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="js/java.js"></script>
     <link rel="stylesheet" href="css/themeA/style.css">
     <link rel="stylesheet" href="css/themeA/bootstrap.min.css">
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
