--- a/template/themeA/creation.html
+++ b/template/themeA/creation.html
@@ -8,14 +8,16 @@
         <div class="col-md-6">
             <form action="include/fonction.php">
                 <textarea name="textTop" placeholder="Top text" class="form-control" rows="6"></textarea>
-                <button type="button" name="button" classe="btn btn-default btn-lg">+</button>
-                <button type="button" name="button" classe="btn btn-default btn-lg">-</button>
-                <input type="color" name="" value="" class="colorPick">
+                <button type="button" name="buttonZoomTop" onclick="changeSize('#sizeTop','add');" classe="btn btn-default btn-lg">+</button>
+                <button type="button" name="buttonDezoomTop" onclick="changeSize('#sizeTop','supp');" classe="btn btn-default btn-lg">-</button>
+                <input id="sizeTop" type="hidden" name="sizeTop" value="30">
+                <input type="color" name="clrTop" value="" class="colorPick">
                 <hr>
                 <textarea name="textBot" placeholder="Bottom text" class="form-control" rows="6"></textarea>
-                <button type="button" name="button" classe="btn btn-default btn-lg">+</button>
-                <button type="button" name="button" classe="btn btn-default btn-lg">-</button>
-                <input type="color" name="" value="" class="colorPick">
+                <button type="button" name="buttonZoomBot" onclick="changeSize('#sizeBot','add');" classe="btn btn-default btn-lg">+</button>
+                <button type="button" name="buttonDezoomBot" onclick="changeSize('#sizeBot','supp');" classe="btn btn-default btn-lg">-</button>
+                <input id='sizeBot' type="hidden" name="sizeBot" value="30">
+                <input type="color" name="clrBot" value="" class="colorPick">
                 <hr>
                 <input type="hidden" name="idImg" value="{{ID}}">
                 <button type="submit" class="btn btn-success btn-lg">Generate</button>
