--- a/template/themeA/vue.html
+++ b/template/themeA/vue.html
@@ -15,7 +15,7 @@
             <hr>
               <div class="search">
                 <span class="fa fa-link"></span>
-                <input placeholder="Search term" style="width: 100%; height: 56px;">
+                <input placeholder="" style="width: 100%; height: 56px;" value="{{IDGENE}}">
               </div>
             </div>
         </div>
