ajout fonction CreateYours
possibilité d'ajouter ces images

--- a/template/themeA/header.html
+++ b/template/themeA/header.html
@@ -2,15 +2,20 @@
 <html>
 
 <head>
-    <!-- META og -->
+      <!-- META og -->
+
+    <meta property="og:title" content="Générateur de meme" />
+    <meta property="og:description" content="Le meilleur site FR de création de meme en ligne !" />
+    <meta property="og:url" content="http://public:acspublic@www.yohannc.public.codeur.online/meme/index.php" />
+    <meta property="og:image" content="http://public:acspublic@www.yohannc.public.codeur.online/meme/public/img/{{ID}}.{{type}}" />
 
     <!-- FACEBOOK -->
     <meta property="fb:app_id" content="facebook_app_id" />
-    <meta property="og:url" content="lien url de l'image" />
+    <meta property="og:url" content="http://public:acspublic@www.yohannc.public.codeur.online/meme/index.php" />
     <meta property="og:title" content="Générateur de meme" />
     <meta property="og:type" content="image" />
     <meta property="og:description" content="Le meilleur site FR de création de meme en ligne !">
-    <meta property="og:image" content="Faut mettre l'image ici" />
+    <meta property="og:image" content="http://public:acspublic@www.yohannc.public.codeur.online/meme/public/img/{{ID}}.{{type}}" />
 
     <!-- TWITTER -->
 
@@ -18,18 +23,29 @@
     <meta name="twitter:site" content="Générateur de meme">
     <meta name="twitter:description" content="Le meilleur site FR de création de meme en ligne !">
     <meta name="twitter:image:src" content="">
-    <meta name="twitter:image" content="">
+    <meta name="twitter:image" content="http://public:acspublic@www.yohannc.public.codeur.online/meme/public/img/{{ID}}.{{type}}">
 
     <!-- End META og -->
     <link rel="stylesheet" href="font-awesome/css/font-awesome.css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="js/java.js"></script>
-    <link rel="stylesheet" href="css/themeA/style.css">
+    
     <link rel="stylesheet" href="css/themeA/bootstrap.min.css">
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <link rel="icon" href="public/favicon/images.png" />
+    <link rel="stylesheet" href="css/themeA/style.css">
     <meta charset="utf-8">
     <title></title>
+    <style>
+        input[type=file]{ display: none; }
+    </style>
+    <script>
+        $(document).ready(function(){
+            $("#bouton").click(function(){
+                $('#uploadMeme').click();
+            });
+        });
+    </script>
 </head>
 
 <body>
@@ -39,6 +55,10 @@
                 <div class="row">
                     <a href="index.php" class="col-md-2-align-left"><img src="public/img/logo.png" width="93em"></a>
                     <button type="button" id="bouton" name="button" class="btn btn-default col-md-2 col-xs-4 pull-right">Create yours</button>
+                    <form action="#" method="post" enctype="multipart/form-data">
+                        <input id="uploadMeme" type="file" name="UploadMeme" onchange="this.form.submit()">
+                        <input type="hidden" name="sendInput">
+                    </form>
                 </div>
             </div>
         </section>
