--- a/template/themeA/creation.html
+++ b/template/themeA/creation.html
@@ -6,14 +6,14 @@
             <img src="public/img/{{ID}}.{{type}}" alt="" class="img-responsive">
         </div>
         <div class="col-md-6">
-            <form action="include/fonction.php">
-                <textarea name="textTop" placeholder="Top text" class="form-control" rows="6"></textarea>
+            <form action="include/fonction.php" onsubmit="return testChampRemplis();">
+                <textarea id="textTop" name="textTop" placeholder="Top text" class="form-control" rows="6" ></textarea>
                 <button type="button" name="buttonZoomTop" onclick="changeSize('#sizeTop','add');" classe="btn btn-default btn-lg">+</button>
                 <button type="button" name="buttonDezoomTop" onclick="changeSize('#sizeTop','supp');" classe="btn btn-default btn-lg">-</button>
                 <input id="sizeTop" type="hidden" name="sizeTop" value="30">
                 <input type="color" name="clrTop" value="" class="colorPick">
                 <hr>
-                <textarea name="textBot" placeholder="Bottom text" class="form-control" rows="6"></textarea>
+                <textarea id="textBot" name="textBot" placeholder="Bottom text" class="form-control" rows="6" ></textarea>
                 <button type="button" name="buttonZoomBot" onclick="changeSize('#sizeBot','add');" classe="btn btn-default btn-lg">+</button>
                 <button type="button" name="buttonDezoomBot" onclick="changeSize('#sizeBot','supp');" classe="btn btn-default btn-lg">-</button>
                 <input id='sizeBot' type="hidden" name="sizeBot" value="30">
